# practical-system-design

./: .gitignore  LICENSE  README.md
exercises/llm-from-scratch/: Cargo.toml
exercises/llm-from-scratch/src/: tensor.rs
exercises/llm-from-scratch/src/nn/: mod.rs
python/consistent_hash_lab/: .dockerignore  Dockerfile  README.md  __init__.py  demo.py  docker-compose.yml  node.py  requirements.txt  ring.py  run.sh
python/consistent_hash_lab/examples/: data.csv
python/consistent_hash_lab/tests/: __init__.py  test_ring.py
rust/llm-from-scratch/: README.md
rust/llm-from-scratch/examples/: mnist.rs
rust/llm-from-scratch/src/: lib.rs
rust/llm-from-scratch/src/nn/: activation.rs  linear.rs  sequential.rs
